k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: justgui-web
  namespace: apps
spec:
  selector:
    app: justgui-web
  ports:
    - name: http
      port: 4321
      targetPort: http
