k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: justgui-web-tls
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`justgui.dev`) || Host(`www.justgui.dev`)
      kind: Rule
      services:
        - name: justgui-web
          port: 4321
  tls:
    certResolver: letsencrypt
